--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
     "espacenet",
     "oauth"
   ],
-  "author": "",
+  "author": "Abdullah Atrash",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourusername/epo-ops-sdk.git"
+    "url": "git+https://github.com/abdullahatrash/epo-ops-sdk.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/epo-ops-sdk/issues"
+    "url": "https://github.com/abdullahatrash/epo-ops-sdk/issues"
   },
-  "homepage": "https://github.com/yourusername/epo-ops-sdk#readme",
+  "homepage": "https://github.com/abdullahatrash/epo-ops-sdk#readme",
   "dependencies": {
     "axios": "^1.8.4",
+    "epo-ops-sdk": "^0.1.0",
     "openid-client": "^5.7.1",
     "zod": "^3.22.4"
   },
